202207112332: Used Atomic load and store to shorten flow.
202207122044: When sleep track launch fails.
202207122257: Reconnected sleep tracker flow properly.
202207131323: Added ambient light as a filter for sleep tracking 
202207132322: Removed power source as a filter for sleep tracking.
202207162155: Added watch for external devices connection.
202207181856: Added five-minute HR measure
202207182239: Added failure catch for heart rate check.
202207221514: Added intraday step flow.
202207240016: Increased sensitivity of light meter for sleep tracking.
202207262308: Fixed the positioning of blocks and removed extraneous blocks.
202208031426: Simplified fiber, removed location and device flows. 
202208032340: Numbered flows.
202208040008: Added log messages for external flow starts.
202208040024: Removed Display Tiles flow (moving to a KWLP solution for launching flows).
202208092249: Use automatic sleep tracking from the Sleep app.
202208211031: Added check for watch on wrist for Sleep flow.
202208301500: Removed Google API sleep trigger.
202209031446: Fixed sleep init issues (hopefully!).
202209280103: Added interactive state check for sleep.
202210031440: Refactored context flow.
202210121844: Added test sleep EOD processes.
202210240915: Added sleep and finance daily updates at 2am.
202210250107: Adding BOD flow.
202210300154: Added readme and refactored fibres.
202211010037: Fixed folder paths...wait.
202211012307: Fixes here and there.
202211022110: Use sleep tracker for sleep init.
202211051945: Added manual sleep tracking start.
202212112211: Removed sleep start, now using qs tiles.
202212150010: Added manual sleep start tracking.
202302071210: Adjusted initialise flow
202302071214: Added toast to notify that context flows have started
202302071220: Initial version
202302071234: Adding init check function
202303231541: Added automated git commit function
202303231545: Bug fixes
202303231610: .
202303231611: .
202303231630: .