@@ -1,1 +1,1 @@
-{"name":"context","blurb":"Flow to start other flows depending on the time or location.","version":"202303231630","configPath":"/storage/emulated/0/.config/Automate/1 Context/","comment":".","uri":"content://com.llamalab.automate.provider/flows/8/data"}
+{"name":"context","blurb":"Flow to start other flows depending on the time or location.","version":"202303240026","configPath":"/storage/emulated/0/.config/Automate/1 Context/","comment":"Refactored EOD processes","uri":"content://com.llamalab.automate.provider/flows/8/data"}
