@@ -134,32 +134,31 @@
                                         <div class='accountFrom'>
                                                 <select name='accountFrom' id='accountFrom' size='1'
                                                         style='text-align:right' required>
-                                                        <option value='Income'>INCOME</option>
+                                                        <option value='Income'>Income</option>
                                                         <option value='' disabled='disabled'>----------</option>
-                                                        <option value='Vivid Current' selected>VIVID CURRENT</option>
-                                                        <option value='Vivid Subscriptions'>VIVID SUBS</option>
-                                                        <option value='Vivid Monthly'>VIVID MONTHLY</option>
-                                                        <option value='Vivid Assets'>VIVID ASSETS</option>
-                                                        <option value='N26 Current'>N26 CURRENT</option>
-                                                        <option value='FNB Cheque'>FNB CHEQUE</option>
-                                                        <option value='Cash'>CASH</option>
+                                                        <option value='Vivid Current' selected>Vivid Current</option>
+                                                        <option value='Vivid Subscriptions'>Vivid Subscriptions</option>
+                                                        <option value='Vivid Monthly'>Vivid Monthly</option>
+                                                        <option value='Revolut Current'>Revolut Current</option>
+                                                        <option value='Revolut Subscriptions'>Revolut Subscriptions</option>
+                                                        <option value='N26 Current'>N26 Current</option>
+                                                        <option value='FNB Cheque'>FNB Cheque</option>
+                                                        <option value='Cash'>Cash</option>
                                                         <option value='' disabled='disabled'>----------</option>
-                                                        <option value='Lyxor Pan Africa UCITS'>LYXOR AFRICA</option>
-                                                        <option value='Coronation Global Managed'>CORONATION GLOBAL
-                                                        </option>
-                                                        <option value='Nedgroup Global Equity'>NEDGROUP GLOBAL</option>
-                                                        <option value='Satrix World Equity'>SATRIX WORLD</option>
-                                                        <option value='Lyxor Europe 600'>LYXOR EUROPE</option>
-                                                        <option value='Lyxor World'>LYXOR WORLD</option>
-                                                        <option value='iShares Emerging Markets'>iSHARES EMERGING
-                                                        </option>
+                                                        <option value='Lyxor Pan Africa UCITS'>Lyxor Africa via TradeRepublic</option>
+                                                        <option value='Coronation Global Managed'>Coronation Global via AG Tax Free</option>
+                                                        <option value='Nedgroup Global Equity'>Nedgroup Global via AG Tax Free</option>
+                                                        <option value='Satrix World Equity'>Satrix World via AG Tax Free</option>
+                                                        <option value='Lyxor Europe 600'>Lyxor Europe via MyLife</option>
+                                                        <option value='Lyxor World'>Lyxor World via MyLife</option>
+                                                        <option value='iShares Emerging Markets'>iShares Emerging via MyLife</option>
                                                 </select>
                                         </div>
                                         &nbsp;|&nbsp;
                                         <div class='accountTo'>
                                                 <select name='accountTo' id='accountTo' size='1'
                                                         style='text-align:left' required>
-                                                        <option value='Expenses' selected>EXPENSES</option>
+                                                        <option value='Expenses' selected>Expenses</option>
                                                         <option value='' disabled='disabled'>----------</option>
                                                         <option value='Vivid Current'>VIVID CURRENT</option>
                                                         <option value='Vivid Subscriptions'>VIVID SUBS</option>
